<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<TableLayout android:id="@+id/TableLayout05" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dp"><TableRow android:id="@+id/TableRow05" android:layout_height="wrap_content" android:layout_width="fill_parent"><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/passwdText" android:editable="false" android:lines="1" android:clickable="false" android:cursorVisible="false" android:focusable="false" android:focusableInTouchMode="false" android:layout_weight="1" android:typeface="monospace" android:scrollHorizontally="true"></EditText><Button android:layout_height="wrap_content" android:id="@+id/CopyButton" android:layout_width="fill_parent" android:layout_gravity="center_vertical" android:layout_marginLeft="3dp" android:drawableLeft="@drawable/copy"></Button></TableRow></TableLayout><View android:id="@+id/View01" android:layout_width="fill_parent" android:background="@color/separator" android:layout_height="1dp"></View>




<TableLayout android:id="@+id/TableLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dip"><TableLayout android:id="@+id/TableLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent"><TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content" android:layout_width="fill_parent"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="PIN" android:id="@+id/PinButton" android:layout_weight="0.5" android:layout_gravity="center_vertical"></Button>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Unix" android:layout_weight="0.5" android:id="@+id/UnixButton" android:layout_gravity="center_vertical"></Button>
</TableRow>
</TableLayout>

</TableLayout>




<View android:id="@+id/View02" android:background="@color/separator" android:layout_width="fill_parent" android:layout_height="1dp"></View><TableLayout android:id="@+id/TableLayout04" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dip"><TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content" android:layout_width="fill_parent"><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/UpperCaseCheck" android:layout_weight="0.5" android:checked="true" android:text="@string/upper_case"></CheckBox>
<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/LowerCaseCheck" android:layout_weight="0.5" android:checked="true" android:text="@string/lower_case"></CheckBox>
</TableRow><TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content" android:layout_height="wrap_content"><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/DigitsCheck" android:layout_weight="0.5" android:checked="true" android:text="@string/digits"></CheckBox>
<CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/SymbolsCheck" android:layout_weight="0.5" android:text="@string/symbols"></CheckBox>
</TableRow></TableLayout><TableLayout android:id="@+id/TableLayout03" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dip"><TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical"><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/length_label"></TextView>

<Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/LenSpinner" android:layout_marginLeft="3dp"></Spinner></TableRow>
</TableLayout>














<TableRow android:id="@+id/TableRow06" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="5dp"><Button android:layout_height="wrap_content" android:id="@+id/GenButton" android:layout_width="fill_parent" android:text="@string/generate"></Button></TableRow>
</LinearLayout>
